force-app/main/default/objects/JobPipeline__mdt/JobPipeline__mdt.object-meta.xml
<CustomObject>
    <description>Top-level container defining a job pipeline — its schedule, failure strategy, and notification settings.</description>
    <label>Job Pipeline</label>
    <pluralLabel>Job Pipelines</pluralLabel>
</CustomObject>