force-app/main/default/objects/JobPipeline__mdt/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <description>Salesforce cron expression used to auto-schedule this pipeline (e.g. &quot;0 0 2 * * ?&quot; for 2 AM daily). Leave blank for manually triggered pipelines.</description>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>