force-app/main/default/objects/JobPipeline__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false the pipeline will not be triggered by the scheduler and cannot be started manually.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>