force-app/main/default/objects/JobPipeline__mdt/fields/MaxConcurrentSteps__c.field-meta.xml
<CustomField>
    <fullName>MaxConcurrentSteps__c</fullName>
    <description>Maximum number of steps the orchestrator will dispatch in a single pass. Acts as a governor safety valve for parallel pipelines.</description>
    <label>Max Concurrent Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>