force-app/main/default/objects/JobPipeline__mdt/fields/MaxPipelineRuntime__c.field-meta.xml
<CustomField>
    <fullName>MaxPipelineRuntime__c</fullName>
    <description>Maximum allowed wall-clock time in minutes for the entire pipeline. The watchdog aborts the run if this limit is exceeded.</description>
    <label>Max Pipeline Runtime (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>