force-app/main/default/objects/JobPipeline__mdt/fields/NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmail__c</fullName>
    <description>Email address that receives alerts when a pipeline step fails and retries are exhausted.</description>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>