force-app/main/default/objects/JobPipeline__mdt/fields/OnStepFailure__c.field-meta.xml
<CustomField>
    <fullName>OnStepFailure__c</fullName>
    <description>Controls pipeline behaviour when a step fails after exhausting retries. AbortPipeline halts immediately; ContinueOnError keeps running independent branches.</description>
    <label>On Step Failure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AbortPipeline</fullName>
                <default>true</default>
                <label>Abort Pipeline</label>
            </value>
            <value>
                <fullName>ContinueOnError</fullName>
                <label>Continue On Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>